--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
   <body>
     <div class="container">
+      <div id="root"></div>
       <small
         ><a
           href="https://github.com/ilonahegedus/zoe2j0"
